(ISA-236) Bugfix legend graphic truncated in menu

--- a/frontend/src/ui/css/app.scss
+++ b/frontend/src/ui/css/app.scss
@@ -227,6 +227,10 @@ footer {
     overflow-x: hidden;
 }
 
+.layer-wrapper .legend-wrapper img {
+    width: 100%;
+}
+
 .catalogue-layer-controls {
     flex: 0 0 auto;
     display: flex;
